@@ -1,3 +1,7 @@
+2010-04-29  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* actors.py, menu.py: Updated translations.
+
 2010-04-22  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* actors.py (ActorGeoIcon): Normalize Google Map URI.
